<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.example</groupId>
  <artifactId>BD_token_with_Java</artifactId>
  <version>1.0-SNAPSHOT</version>

  <properties>
    <maven.compiler.source>17</maven.compiler.source>  <!-- или 11/21, в зависимости от твоего JDK -->
    <maven.compiler.target>17</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencies>

    <!-- PostgreSQL JDBC -->
    <dependency>
      <groupId>org.postgresql</groupId>
      <artifactId>postgresql</artifactId>
      <version>42.7.1</version>
    </dependency>

    <!-- JavaMail API -->
    <dependency>
      <groupId>com.sun.mail</groupId>
      <artifactId>javax.mail</artifactId>
      <version>1.6.2</version>
    </dependency>

    <!-- Apache HTTPClient (Telegram API) -->
    <dependency>
      <groupId>org.apache.httpcomponents</groupId>
      <artifactId>httpclient</artifactId>
      <version>4.5.13</version>
    </dependency>

    <!-- OpenSMPP для SMS эмулятора -->
    <dependency>
      <groupId>org.opensmpp</groupId>
      <artifactId>opensmpp-core</artifactId>
      <version>3.0.0</version>
    </dependency>

    <!-- SLF4J + Logback для логирования -->
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <version>1.4.5</version>
    </dependency>

    <!-- JUnit (если будешь писать тесты) -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>5.9.3</version>
      <scope>test</scope>
    </dependency>
    <!-- JSONObject из org.json -->
    <dependency>
      <groupId>org.json</groupId>
      <artifactId>json</artifactId>
      <version>20240303</version>
    </dependency>
    <!-- SQLite  -->
    <dependency>
      <groupId>org.xerial</groupId>
      <artifactId>sqlite-jdbc</artifactId>
      <version>3.42.0.0</version>
    </dependency>
    <!-- СМС  -->
    <dependency>
      <groupId>org.jsmpp</groupId>
      <artifactId>jsmpp</artifactId>
      <version>2.3.7</version>
    </dependency>
    <!-- СМС  -->
    <dependency>
      <groupId>org.opensmpp</groupId>
      <artifactId>opensmpp-core</artifactId>
      <version>3.0.0</version>
    </dependency>




  </dependencies>

  <build>
    <plugins>
      <!-- Maven compiler plugin -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
          <source>${maven.compiler.source}</source>
          <target>${maven.compiler.target}</target>
        </configuration>
      </plugin>

      <!-- Плагин для запуска main() из терминала -->
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>3.1.0</version>
        <configuration>
          <mainClass>otp.App</mainClass> <!-- укажешь свою точку входа -->
        </configuration>
      </plugin>
      <!-- чтобы не ругались что Слитл там чтото нативное использует -->
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>3.1.0</version>
        <configuration>
          <mainClass>otp.App</mainClass>
          <commandlineArgs>--enable-native-access=ALL-UNNAMED</commandlineArgs>
        </configuration>
      </plugin>

    </plugins>
  </build>

</project>

